--- a/docker/Dockerfile_ros1
+++ b/docker/Dockerfile_ros1
@@ -2,7 +2,8 @@ FROM ubuntu:xenial
 MAINTAINER esteve@apache.org
 RUN dpkg --add-architecture i386
 RUN apt-get update
-RUN apt-get install -y --no-install-recommends locales apt-utils
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends apt-utils
+RUN apt-get install -y --no-install-recommends locales
 RUN locale-gen en_US en_US.UTF-8
 RUN update-locale LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8
 ENV LANG en_US.UTF-8
