--- a/docker/Dockerfile_ros1
+++ b/docker/Dockerfile_ros1
@@ -20,7 +20,7 @@ RUN apt-get install -y --no-install-recommends apt-transport-https
 RUN apt-get install -y --no-install-recommends build-essential cmake git libssl-dev wget zlib1g-dev
 RUN apt-get install -y --no-install-recommends python-rosdep python-rosinstall-generator python-wstool python-rosinstall build-essential
 RUN apt-get install -y --no-install-recommends python3-vcstool python3-empy python-empy
-RUN apt-get install -y --no-install-recommends automake pkg-config libtool jq
+RUN apt-get install -y --no-install-recommends automake pkg-config libtool jq moreutils
 RUN apt-get install -y --no-install-recommends ccache 
 RUN useradd -ms /bin/bash nao
 WORKDIR /home/nao
