small bug fixes

--- a/docker/Dockerfile_ros1
+++ b/docker/Dockerfile_ros1
@@ -1,5 +1,6 @@
 FROM ubuntu:xenial
 MAINTAINER esteve@apache.org
+USER root
 RUN dpkg --add-architecture i386
 RUN apt-get update
 RUN apt-get install -y --no-install-recommends locales
